Infrastructure/kube/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-api
  labels:
    app: tp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tp-api
  template:
    metadata:
      labels:
        app: tp-api
    spec:
      containers:
      - name: tp-api
        image: dlike/tp-api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tp-api
  labels:
    app: tp-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tp-api
